# disco

./: .gitignore  Cargo.toml  LICENSE  README.md  install-linux.sh  install.ps1  install.sh
docs/: plan-tui.md  plan.md  requirements.md
i18n/en/: cli.ftl  common.ftl  errors.ftl  help.ftl  menu.ftl
i18n/zh-CN/: cli.ftl  common.ftl  errors.ftl  help.ftl  menu.ftl
src/: lib.rs  main.rs
src/cli/: context.rs  display.rs  interactive.rs  interruptible.rs  mod.rs
src/cli/commands/: disk.rs  get.rs  mod.rs  retrieve.rs  scan.rs  search.rs  solid.rs  store.rs  visualize.rs
src/domain/: disk.rs  entry.rs  mod.rs  plan.rs  solid.rs
src/executor/: copy.rs  mod.rs  task.rs  verify.rs
src/i18n/: loader.rs  mod.rs
src/index/: hasher.rs  mod.rs  query.rs  scanner.rs
src/persistence/: config.rs  db.rs  disk_repo.rs  entry_repo.rs  mod.rs  schema.rs  task_repo.rs
src/planner/: mod.rs  splitter.rs  store_planner.rs  strategy.rs
src/storage/: fs.rs  mod.rs  mount.rs
src/storage/platform/: linux.rs  macos.rs  mod.rs
